<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ContentLinear"
    android:id="@+id/main_content">
    
	<LinearLayout
	    style="@style/ContentLinear"
	    android:background="@drawable/wrapper_content"
	    android:orientation="horizontal">
		<ImageView 
		    android:contentDescription="@string/avatar"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:src="@drawable/profil_default"/>
			
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/margin_text"
	        android:orientation="vertical">
			
		    <TextView
		        style="@style/Texte"
		        android:text="@string/namemust"
		        android:layout_marginBottom="3dip"/>
		    
		    <EditText
		        style="@style/TexteField"
		        android:inputType="text"
		        android:id="@+id/nameField"
		        android:layout_marginBottom="3dip"/>
		    
		    <TextView
		        style="@style/Texte"
		        android:text="@string/firstnamemust"
		        android:layout_marginBottom="3dip"/>
		    
		    <EditText
		        style="@style/TexteField"
		        android:inputType="text"
		        android:id="@+id/firstnameField"
		        android:layout_marginBottom="3dip"/>
		    
		    <TextView
		        style="@style/Texte"
		        android:text="@string/birthdatemust"
		        android:layout_marginBottom="3dip"/>
		    
		    <TextView
		        style="@style/TexteField"
		        android:inputType="none"
		        android:id="@+id/birthdateField"
		        android:layout_marginBottom="3dip"
		        android:onClick="doDatePicker"/>
		    
		    <TextView
		        style="@style/Texte"
		        android:text="@string/emailmust"
		        android:layout_marginBottom="3dip"/>
		    
		    <EditText
		        style="@style/TexteField"
		        android:inputType="textEmailAddress"
		        android:id="@+id/emailField"
		        android:layout_marginBottom="3dip"/>
		
		    <TextView
		        style="@style/Texte"
		        android:layout_marginBottom="3dip"
		        android:text="@string/passwordmust"/>
		    
		    <EditText
		        style="@style/TexteField"
		        android:inputType="textPassword"
		        android:id="@+id/passwordField"
		        android:layout_marginBottom="3dip"/>
		    
		    <TextView
		        style="@style/Texte"
		        android:layout_marginBottom="3dip"
		        android:text="@string/desc"/>
		    
		    <EditText
		        style="@style/TexteField"
		        android:id="@+id/descField"
		        android:layout_marginBottom="3dip"
		        android:layout_height="80dip"
		        android:gravity="top"
		        android:inputType="textMultiLine"
		        android:text=""/>
		     
		    <Button
		        style="@style/Button"
		        android:text="@string/register" 
		        android:onClick="goRegister"/>
		    
	    	<TextView
		        style="@style/Texte"
		        android:layout_marginBottom="3dip"
		        android:text="@string/field_must"/>
	    </LinearLayout>
	    
	</LinearLayout>
</ScrollView>