<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ContentLinear"
    android:id="@+id/main_content">
    <LinearLayout
	    style="@style/ContentLinear"
	    android:background="@drawable/wrapper_content"
	    android:orientation="vertical">
	    
        <TextView
		        style="@style/Texte"
		        android:text="@string/old_password"
		        android:layout_marginBottom="3dip"/>
	    <EditText
	        style="@style/TexteField"
	        android:inputType="textPassword"
	        android:id="@+id/old_password"
	        android:layout_marginBottom="3dip"/>
	    
	    <TextView
		        style="@style/Texte"
		        android:text="@string/new_password"
		        android:layout_marginBottom="3dip"/>
	    <EditText
	        style="@style/TexteField"
	        android:inputType="textPassword"
	        android:id="@+id/new_password"
	        android:layout_marginBottom="3dip"/>
	    
	    <TextView
		        style="@style/Texte"
		        android:text="@string/confirm_password"
		        android:layout_marginBottom="3dip"/>
	    <EditText
	        style="@style/TexteField"
	        android:inputType="textPassword"
	        android:id="@+id/confirm_password"
	        android:layout_marginBottom="3dip"/>
	    <Button
		        style="@style/Button"
		        android:text="@string/modif_info" 
		        android:onClick="doUpdate"/>
	    <TextView
		        style="@style/Texte"
		        android:layout_marginBottom="3dip"
		        android:text="@string/field_must"/>
    </LinearLayout>
</ScrollView>