<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_content">
	<LinearLayout 
	    style="@style/ContentLinear" >
	
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:background="@drawable/wrapper_content"
	    	android:orientation="horizontal">  
		    <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/profil_default"
				android:background="@drawable/bordered"
				android:layout_margin="5dip"
				android:contentDescription="@string/avatar"/>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
			    <TextView
			        android:layout_marginTop="@dimen/margin_text"
			        android:id="@+id/name"
			        style="@style/Texte"/>
			    <TextView
			        android:id="@+id/birthdate"
			        style="@style/Texte"/>
			    <TextView
			        android:id="@+id/email"
			        style="@style/Texte"/>
			    <TextView
			        android:id="@+id/desc"
			        style="@style/Texte"/>
		   	</LinearLayout>
		</LinearLayout>
		<LinearLayout 
		    android:baselineAligned="false"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:background="@drawable/wrapper_bottom_content"
	    	android:padding="5dip"
	    	android:orientation="horizontal">
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="vertical">
		        <Button
			        style="@style/Button"
			        android:text="@string/modif_info"
			        android:layout_marginRight="2dip"
			        android:layout_marginBottom="4dip" 
			        android:onClick="doModif"/>
		        <Button
			        style="@style/Button"
			        android:text="@string/friends" 
			        android:layout_marginRight="2dip"
			        android:layout_marginBottom="4dip"
			        android:clickable="false"
			        android:background="@drawable/button_disabled"
			        android:onClick=""/>
		        <Button
			        style="@style/Button"
			        android:text="@string/history" 
			        android:layout_marginRight="2dip"
			        android:clickable="false"
			        android:background="@drawable/button_disabled"
			        android:onClick=""/>
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="vertical">
		        <Button
			        style="@style/Button"
			        android:text="@string/feats" 
			        android:layout_marginLeft="2dip"
			        android:layout_marginBottom="4dip"
			        android:clickable="false"
			        android:background="@drawable/button_disabled"
			        android:onClick=""/>
		        <Button
			        style="@style/Button"
			        android:text="@string/option" 
			        android:layout_marginLeft="2dip"
			        android:layout_marginBottom="4dip"
			        android:clickable="false"
			        android:background="@drawable/button_disabled"
			        android:onClick=""/>
		        <Button
			        style="@style/Button"
			        android:text="@string/modif_password" 
			        android:layout_marginLeft="2dip"
			        android:clickable="false"
			        android:background="@drawable/button_disabled"
			        android:onClick=""/>
		    </LinearLayout>
		</LinearLayout>
	</LinearLayout>
</ScrollView>