<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:baselineAligned="false"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="@dimen/padding_content"
	    android:background="@drawable/wrapper_content_without_angle">
        
	<!--         Champ hidden -->
	        <TextView 
				android:id="@+id/idCell"
				android:visibility="gone"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"/>
	<!--     	fin des champs cachés  -->
	  	
	  	
	  	<ImageView 
	  	    android:contentDescription="@string/avatar"
	  	    android:src="@drawable/profil_default"
	  	    android:layout_width="60dip"
	  	    android:layout_height="60dip"
	  	    android:background="@drawable/bordered"/>
	  	
	  	<LinearLayout
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_weight="1">
		    <TextView
		        android:id="@+id/textCell"
		        android:textSize="@dimen/font_size_menu"
		        android:textColor="@color/text_color_titre"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text=""
				android:layout_marginLeft="@dimen/margin_text"/>
		    <TextView
		        android:id="@+id/sousTextCell"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/font_size_little"
		        android:textColor="@color/text_color_little"
		        android:text=""
				android:layout_marginLeft="@dimen/margin_text"/>
		    <TextView
	            android:id="@+id/point_reputation"
			    android:textSize="@dimen/font_size_little"
		        android:textColor="@color/text_color_little"
	            android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/unknow_fame"
			    android:visibility="gone"
			    android:layout_marginLeft="@dimen/margin_text"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/wrapper_bottom_content_without_angle"
	    android:padding="@dimen/padding_content"
		android:orientation="horizontal">
	  	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:id="@+id/antiwar">
	  	    
	  	</LinearLayout>
	    <Button
	        style="@style/Button"
	        android:layout_width="match_parent"
	        android:layout_marginLeft="2dip"
	        android:text="@string/payer"
	        android:onClick="goPayer"
	        android:layout_weight="1"/>
		
	</LinearLayout>
</LinearLayout>